--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "unitbuddy-plasmo",
-  "displayName": "Unitbuddy plasmo",
-  "version": "0.0.0",
-  "description": "A basic Plasmo extension.",
-  "author": "vladinski.jpg",
+  "name": "unitbuddy",
+  "displayName": "UnitBuddy",
+  "version": "0.1.0",
+  "description": "This extension converts all measuring units to your preferred system of units.",
+  "author": "VladCuciureanu",
+  "license": "GPL-3.0",
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
     "package": "plasmo package"
   },
   "dependencies": {
+    "@plasmohq/storage": "^0.13.0",
+    "fp-ts": "^2.13.1",
+    "io-ts": "^2.2.19",
+    "lodash": "^4.17.21",
     "plasmo": "0.59.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,6 +22,7 @@
   "devDependencies": {
     "@plasmohq/prettier-plugin-sort-imports": "3.6.0",
     "@types/chrome": "0.0.202",
+    "@types/lodash": "^4.14.190",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -24,6 +30,7 @@
     "typescript": "4.9.3"
   },
   "manifest": {
+    "default_locale": "en",
     "host_permissions": [
       "https://*/*"
     ]
